Add data binding / view model test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
     configurations.all {
         resolutionStrategy.force 'android.arch.lifecycle:extensions:1.1.1'
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
